results/demo_20260121_072810/netfail/allow-api-to-auth.backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"creationTimestamp":"2026-01-21T05:56:04Z","generation":1,"name":"allow-api-to-auth","namespace":"resilience","resourceVersion":"48943","uid":"68305b11-eb0d-46fa-a54d-39844b6d719a"},"spec":{"egress":[{"ports":[{"port":8000,"protocol":"TCP"}],"to":[{"podSelector":{"matchLabels":{"app":"auth"}}}]}],"podSelector":{"matchLabels":{"app":"api"}},"policyTypes":["Egress"]}}
  creationTimestamp: "2026-01-21T06:14:58Z"
  generation: 1
  name: allow-api-to-auth
  namespace: resilience
  resourceVersion: "50236"
  uid: 5c886190-5f55-4932-917c-ff05e7913a47
spec:
  egress:
  - ports:
    - port: 8000
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: auth
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Egress
